chore: fix format

--- a/packages/storybook-html/stories/components/breadcrumb/breadcrumb.docs.mdx
+++ b/packages/storybook-html/stories/components/breadcrumb/breadcrumb.docs.mdx
@@ -49,11 +49,14 @@ Wrap the `nav.uq-breadcrumb` element in a `.uq-breadcrumbs` and `.uq-container` 
           <a class="uq-breadcrumb__link" title="Home" href="/">UQ home</a>
         </li>
         <li class="uq-breadcrumb__item">
-          <a class="uq-breadcrumb__link" title="Level one" href="/information-and-services">Level one</a>
+          <a
+            class="uq-breadcrumb__link"
+            title="Level one"
+            href="/information-and-services"
+            >Level one</a
+          >
         </li>
-        <li class="uq-breadcrumb__item">
-          Current page
-        </li>
+        <li class="uq-breadcrumb__item">Current page</li>
       </ol>
     </nav>
   </div>
