--- a/packages/storybook-html/stories/components/breadcrumb/breadcrumb.docs.mdx
+++ b/packages/storybook-html/stories/components/breadcrumb/breadcrumb.docs.mdx
@@ -18,68 +18,48 @@ import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 
 Breadcrumbs are a horizontal list of links used to indicate the current page location within the information architecture (the first level always being the UQ homepage). Page links are separated by a chevron icon which indicates the level of that page relative to the page links beside it. Breadcrumbs are truncated and ellipsed (...) when the text is longer than a set width, however the current page crumb is not linked and always listed in full. UQ homepage is the base.
 
-<Canvas withSource="none" withToolbar>
+<Canvas>
   <Story id="components-breadcrumb--breadcrumb" />
 </Canvas>
 
-```html
-<nav class="uq-breadcrumb" aria-label="Breadcrumb">
-  <ol class="uq-breadcrumb__list">
-    <li class="uq-breadcrumb__item">
-      <a class="uq-breadcrumb__link" title="Home" href="/">Home</a>
-    </li>
-    <li class="uq-breadcrumb__item">
-      <a
-        class="uq-breadcrumb__link"
-        title="Level one"
-        href="/information-and-services"
-        >Level one</a
-      >
-    </li>
-    <li class="uq-breadcrumb__item">
-      <a
-        class="uq-breadcrumb__link"
-        title="Level two"
-        href="/information-and-services/internet-and-wifi"
-        >Level two</a
-      >
-    </li>
-    <li class="uq-breadcrumb__item">
-      <a
-        class="uq-breadcrumb__link"
-        title="Bachelor of Business with a Major in Management or Finance"
-        href="#"
-        >Bachelor of Business with a Major in Management or Finance</a
-      >
-    </li>
-    <li class="uq-breadcrumb__item">
-      <a
-        class="uq-breadcrumb__link"
-        title="Major Leadership and Management Science"
-        href="#"
-        >Major Leadership and Management Science</a
-      >
-    </li>
-    <li class="uq-breadcrumb__item">Current page</li>
-  </ol>
-</nav>
-```
-
 ### Truncation
 
-When exceeding 4 breadcrumbs - the current page, parent, parent's parent and home crumbs will be shown with the additional crumbs collapsed behind an expand link. The full breadcrumb trail can then be viewed by clicking the expand crumb. _Note: only expand functionality is included, and cannot be collapsed again without a page refresh._
+Any link title longer then 144px will be truncated using a text-overflow ellipsis.
+
+Additionally, when exceeding 4 breadcrumbs - the current page, parent, and first grandparent and UQ home breadcrumbs will be shown with any additional breadcrumbs collapsed behind an expand link. The full breadcrumb trail can then be viewed by clicking the expand crumb. _Note: only expand functionality is included, and cannot be collapsed again without a page refresh._
+
+This functionality is provided by the `breadcrumb` js class and is implemented as below.
+
+```js
+import { breadcrumb } from "@uqds/breadcrumb";
+
+new breadcrumb(document.querySelector(".uq-breadcrumb"));
+```
 
 ### Wrapper
 
-Wrap the `nav.uq-breadcrumb` element in a `div.uq-breadcrumb__container` element when including in the page layout. This provides correct padding, container width and the bottom border.
+Wrap the `nav.uq-breadcrumb` element in a `.uq-breadcrumbs` and `.uq-container` element when including in the page layout. This provides correct padding, container width and the bottom border.
 
 ```html
-<div class="uq-breadcrumb__container">
-  <nav class="uq-breadcrumb" aria-label="Breadcrumb">
-    <li class="uq-breadcrumb__item">
-      <a class="uq-breadcrumb__link" title="Home" href="/">Home</a>
-    </li>
-  </nav>
+<div class="uq-breadcrumbs">
+  <div class="uq-container">
+    <nav class="uq-breadcrumb" aria-label="Breadcrumb">
+      <ol class="uq-breadcrumb__list">
+        <li class="uq-breadcrumb__item">
+          <a class="uq-breadcrumb__link" title="Home" href="/">UQ home</a>
+        </li>
+        <li class="uq-breadcrumb__item">
+          <a
+            class="uq-breadcrumb__link"
+            title="Level one"
+            href="/information-and-services"
+            >Level one</a
+          >
+        </li>
+        <li class="uq-breadcrumb__item">Current page</li>
+      </ol>
+    </nav>
+  </div>
 </div>
 ```
 
