--- a/packages/storybook-html/stories/components/core/typography.story.mdx
+++ b/packages/storybook-html/stories/components/core/typography.story.mdx
@@ -234,7 +234,7 @@ export const Styles = () => `
       <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-l</td>
       <td className="uqds-table__item" data-title="Line-height:">1.5</td>
-      <td className="uqds-table__item" data-title="Colour:">$text</td>
+      <td className="uqds-table__item" data-title="Colour:">$grey-900</td>
       <td className="uqds-table__item" data-title="Example"><p class="uqds-font--lead">This is lead paragraph text</p></td> 
     </tr>
     <tr className="uqds-table__row">
@@ -243,7 +243,7 @@ export const Styles = () => `
       <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-m</td>
       <td className="uqds-table__item" data-title="Line-height:">1.5</td>
-      <td className="uqds-table__item" data-title="Colour:">$text</td>
+      <td className="uqds-table__item" data-title="Colour:">$grey-900</td>
       <td className="uqds-table__item" data-title="Example"><p>This is paragraph text</p></td> 
     </tr>
     <tr className="uqds-table__row">
@@ -252,7 +252,7 @@ export const Styles = () => `
       <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-s</td>
       <td className="uqds-table__item" data-title="Line-height:">1.5</td>
-      <td className="uqds-table__item" data-title="Colour:">$text</td>
+      <td className="uqds-table__item" data-title="Colour:">$grey-900</td>
       <td className="uqds-table__item" data-title="Example"><p class="uqds-font--small">This is small paragraph text</p></td> 
     </tr>
     <tr className="uqds-table__row">
@@ -261,7 +261,7 @@ export const Styles = () => `
       <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-xs</td>
       <td className="uqds-table__item" data-title="Line-height:">1.5</td>
-      <td className="uqds-table__item" data-title="Colour:">$text</td>
+      <td className="uqds-table__item" data-title="Colour:">$grey-900</td>
       <td className="uqds-table__item" data-title="Example"><p class="uqds-font--xsmall">This is extra small paragraph text</p></td> 
     </tr>
     <tr className="uqds-table__row">
@@ -279,7 +279,7 @@ export const Styles = () => `
       <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-m</td>
       <td className="uqds-table__item" data-title="Line-height:">1.5</td>
-      <td className="uqds-table__item" data-title="Colour:">$text</td>
+      <td className="uqds-table__item" data-title="Colour:">$grey-900</td>
       <td className="uqds-table__item" data-title="Example"><ol><li>This is an ordered list item</li></ol></td> 
     </tr>
     <tr className="uqds-table__row">
@@ -288,7 +288,7 @@ export const Styles = () => `
       <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-m</td>
       <td className="uqds-table__item" data-title="Line-height:">1.5</td>
-      <td className="uqds-table__item" data-title="Colour:">$text</td>
+      <td className="uqds-table__item" data-title="Colour:">$grey-900</td>
       <td className="uqds-table__item" data-title="Example"><ul><li>This is an unordered list item</li></ul></td> 
     </tr>
     <tr className="uqds-table__row">
@@ -297,7 +297,7 @@ export const Styles = () => `
       <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-s</td>
       <td className="uqds-table__item" data-title="Line-height:">1.5</td>
-      <td className="uqds-table__item" data-title="Colour:">$text</td>
+      <td className="uqds-table__item" data-title="Colour:">$grey-900</td>
       <td className="uqds-table__item" data-title="Example"><label>This is a label</label></td> 
     </tr>
     <tr className="uqds-table__row">
@@ -306,7 +306,7 @@ export const Styles = () => `
       <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-l</td>
       <td className="uqds-table__item" data-title="Line-height:">1.5</td>
-      <td className="uqds-table__item" data-title="Colour:">$text</td>
+      <td className="uqds-table__item" data-title="Colour:">$grey-900</td>
       <td className="uqds-table__item" data-title="Example"><blockquote>This is a blockquote</blockquote></td> 
     </tr>
   </tbody>
