--- a/packages/storybook-html/stories/components/header/header.mdx
+++ b/packages/storybook-html/stories/components/header/header.mdx
@@ -65,8 +65,6 @@ appHeight();
 When implementation of the full header is not possible, a simplified approach using basic elements may be appropriate.
 UQ purple background combined with the UQ logo make up the most important elements of the header.
 
-{" "}
-
 <Story of={HeaderStories.basicHeader} />
 
 ### Default search
@@ -77,17 +75,13 @@ The default option is a global search of all UQ. The search feature sends users 
 > functionality within your application e.g. searching for a location on a map,
 > searching for books or articles in a library database.
 
-{" "}
-
-<Story of={HeaderStories.searchGlobal} parameters={{background={ default: "UQ purple" } }} />
+<Story of={HeaderStories.searchGlobal}  />
 
 ### Global and local search
 
 You can optionally provide two radio fields, allowing users to choose to search all UQ sites or just the content on your site.
 
 > \*If your application/website isn't indexed by UQ Search, it may impact what results are provided by a restricted search.
-
-{" "}
 
 <Story of={HeaderStories.searchLocal} />
 
