Chore: hero tabs render

--- a/packages/storybook-html/stories/components/hero-basic/hero-basic.docs.mdx
+++ b/packages/storybook-html/stories/components/hero-basic/hero-basic.docs.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Canvas } from "@storybook/blocks";
+import { Meta, Story, Canvas} from "@storybook/blocks";
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 import * as HeroBasicStories from "./hero-basic.stories";
 
@@ -72,7 +72,7 @@ There are no size or colour variations for the basic hero component.
 #### Basic
 
 <Canvas>
-  <Story of={HeroBasicStories.HeroBasic} />
+  <Story of={HeroBasicStories.Basic} />
 </Canvas>
 
 #### Program
