chore: removing code artefacts

--- a/packages/storybook-html/stories/components/core/date.mdx
+++ b/packages/storybook-html/stories/components/core/date.mdx
@@ -19,7 +19,7 @@ These date formats are designed for
 <table>
   <caption>Basic date displays</caption>
 
-{" "}
+
 
 <thead>
   <tr>
@@ -55,8 +55,8 @@ These date formats are designed for
       </td>
 
       <td>
-        If a timestamp is within the current day, it’s generally{" "}
-        <strong>unnecessary</strong> to show either “today”, the day or date.{" "}
+        If a timestamp is within the current day, it’s generally
+        <strong>unnecessary</strong> to show either “today”, the day or date.
 
         <br />
 
@@ -194,7 +194,7 @@ Relative language may not always be appropriate, e.g. current date in a clock ap
 <table>
   <caption>Relative language and approximate time</caption>
 
-{" "}
+
 
 <thead>
   <tr>
@@ -256,7 +256,7 @@ Depending on the context, show either date or time, or both date and time.
 <table>
   <caption>Date and time</caption>
 
-{" "}
+
 
 <thead>
   <tr>
@@ -341,7 +341,7 @@ Depending on the context, show either date or time, or both date and time.
 <table>
   <caption>Date and time</caption>
 
-{" "}
+
 
 <thead>
   <tr>
