--- a/packages/storybook-html/stories/components/grid-menu/grid-menu.mdx
+++ b/packages/storybook-html/stories/components/grid-menu/grid-menu.mdx
@@ -19,9 +19,9 @@ The height of the grid menu items is by default equalised on its row.
 
 ## Default example
 
-{" "}
 
-<Story of={GridMenuStories.gridMenuDefault} />{" "}
+
+<Story of={GridMenuStories.gridMenuDefault} />
 
 ```html
 <h2>Grid menu default</h2>
@@ -51,9 +51,9 @@ The height of the grid menu items is by default equalised on its row.
 
 ### With description
 
-{" "}
 
-<Story of={GridMenuStories.gridMenuDescription} />{" "}
+
+<Story of={GridMenuStories.gridMenuDescription} />
 
 ```html
 <ul class="uq-grid-menu">
@@ -76,9 +76,9 @@ The height of the grid menu items is by default equalised on its row.
 
 ### With dark text
 
-{" "}
 
-<Story of={GridMenuStories.gridMenuDarkText} />{" "}
+
+<Story of={GridMenuStories.gridMenuDarkText} />
 
 ```html
 <ul class="uq-grid-menu uq-grid-menu--dark-text">
@@ -101,9 +101,9 @@ The height of the grid menu items is by default equalised on its row.
 
 ### With icons
 
-{" "}
 
-<Story of={GridMenuStories.gridMenuIcons} />{" "}
+
+<Story of={GridMenuStories.gridMenuIcons} />
 
 ```html
 <ul class="uq-grid-menu">
@@ -121,9 +121,9 @@ The height of the grid menu items is by default equalised on its row.
 
 ### 2 column
 
-{" "}
 
-<Story of={GridMenuStories.gridMenu2Column} />{" "}
+
+<Story of={GridMenuStories.gridMenu2Column} />
 
 ```html
 <ul class="uq-grid-menu uq-grid-menu--2-column">
@@ -136,9 +136,9 @@ The height of the grid menu items is by default equalised on its row.
 
 ### 4 column
 
-{" "}
 
-<Story of={GridMenuStories.gridMenu4Column} />{" "}
+
+<Story of={GridMenuStories.gridMenu4Column} />
 
 ```html
 <ul class="uq-grid-menu uq-grid-menu--4-column">
@@ -153,6 +153,6 @@ The height of the grid menu items is by default equalised on its row.
 
 This is an example of Grid menu items equalising height by default in its row
 
-{" "}
 
-<Story of={GridMenuStories.gridMenuEqualisedHeight} />{" "}
+
+<Story of={GridMenuStories.gridMenuEqualisedHeight} />
