--- a/packages/storybook-html/stories/components/grid/grid.mdx
+++ b/packages/storybook-html/stories/components/grid/grid.mdx
@@ -24,9 +24,9 @@ This grid gives you a _main_ content column and a _sidebar_ column that stack
 for mobile. Under the hood, is our _6-8-12_ grid so you can keep your content
 consistently aligned with the base grid.
 
-{" "}
 
-<Story of={GridStories.golden} />{" "}
+
+<Story of={GridStories.golden} />
 
 ### How-to
 
@@ -49,9 +49,9 @@ See what happens when you add more columns to the same container!
 
 Behaves like _Golden_ but has two columns of equal size at larger screen sizes.
 
-{" "}
 
-<Story of={GridStories.halves} />{" "}
+
+<Story of={GridStories.halves} />
 
 ### How-to
 
@@ -67,9 +67,9 @@ Behaves like _Golden_ but has two columns of equal size at larger screen sizes.
 Behaves like _Golden_ but has three columns of equal size at larger screen
 sizes.
 
-{" "}
 
-<Story of={GridStories.thirds} />{" "}
+
+<Story of={GridStories.thirds} />
 
 ### How-to
 
@@ -85,9 +85,9 @@ sizes.
 
 Behaves like _Golden_ but has four columns of equal size at larger screen sizes.
 
-{" "}
 
-<Story of={GridStories.quarters} />{" "}
+
+<Story of={GridStories.quarters} />
 
 ### How-to
 
@@ -107,9 +107,9 @@ to give you a quick & flexible layout solution. You can use this grid to
 organise your content into columns that stack when browser sizes are smaller.
 Therefore, it makes it an ideal solution for arranging linear material.
 
-{" "}
 
-<Story of={GridStories.flexible1} />{" "}
+
+<Story of={GridStories.flexible1} />
 
 ### How-to
 
@@ -125,9 +125,9 @@ modifier) like the following.
 </div>
 ```
 
-{" "}
 
-<Story of={GridStories.flexible2} />{" "}
+
+<Story of={GridStories.flexible2} />
 
 Pay attention to what the grid does when the screens get very small.
 
@@ -160,9 +160,9 @@ screen sizes.
 </div>
 ```
 
-{" "}
 
-<Story of={GridStories.twelveEightSixExample1} />{" "}
+
+<Story of={GridStories.twelveEightSixExample1} />
 
 ### Stacking columns for smaller screens
 
@@ -188,9 +188,9 @@ layout with the grid:
 The difference between this example and the one before is that the two columns
 take up the whole available width for the smallest screens.
 
-{" "}
 
-<Story of={GridStories.twelveEightSixExample2} />{" "}
+
+<Story of={GridStories.twelveEightSixExample2} />
 
 ### The 6-column grid column-span classes (designed for _mobile_ displays)
 
@@ -198,9 +198,9 @@ Create layouts for the smallest screens.
 
 `uq-grid__col--[1—6]`, e.g. `<div class="uq-grid__col uq-grid__col--4">...</div>`
 
-{" "}
 
-<Story of={GridStories.twelveEightSixMobile} />{" "}
+
+<Story of={GridStories.twelveEightSixMobile} />
 
 ### The 8-column grid column-span classes (designed for _tablet_ displays)
 
@@ -208,9 +208,9 @@ Shift the layout for larger screens.
 
 `uq-grid__col--md-[1—8]`, e.g. `<div class="uq-grid__col uq-grid__col--4 uq-grid__col--md-6">...</div>`
 
-{" "}
 
-<Story of={GridStories.twelveEightSixTablet} />{" "}
+
+<Story of={GridStories.twelveEightSixTablet} />
 
 ### The 12-column grid column-span classes (designed for _desktop/laptop_ displays)
 
@@ -218,7 +218,7 @@ Shift the layout for the largest screens.
 
 `uq-grid__col--xl-[1—12]`, e.g. `<div class="uq-grid__col uq-grid__col--4 uq-grid__col--md-6 uq-grid__col--xl-8">...</div>`
 
-{" "}
+
 
 <Story of={GridStories.twelveEightSixDesktop} /> >
 
@@ -228,9 +228,9 @@ You can nest grids, i.e. place another grid container within a grid column, to
 create nested layouts. However, columns can become too narrow if you nest too
 deeply or use small column spans.
 
-{" "}
 
-<Story of={GridStories.twelveEightSixNested} />{" "}
+
+<Story of={GridStories.twelveEightSixNested} />
 
 ### Example using the 6-8-12 grid
 
@@ -285,9 +285,9 @@ still followed.
 </div>
 ```
 
-{" "}
 
-<Story of={GridStories.flexible1} />{" "}
+
+<Story of={GridStories.flexible1} />
 
 ## Alternative layout container
 
@@ -306,9 +306,9 @@ container (`.uq-grid`) and a full length grid column (`.uq-grid__col`).
 </div>
 ```
 
-{" "}
 
-<Story of={GridStories.layoutContainer} />{" "}
+
+<Story of={GridStories.layoutContainer} />
 
 ## SASS mixins
 
