--- a/packages/storybook-html/stories/components/icon/icon.mdx
+++ b/packages/storybook-html/stories/components/icon/icon.mdx
@@ -12,9 +12,9 @@ import * as IconStories from "./icon.stories";
 
 ## List of icons
 
-{" "}
 
-<Story of={IconStories.icon} />{" "}
+
+<Story of={IconStories.icon} />
 
 ## Usage
 
