--- a/packages/storybook-html/stories/docs/introduction/get-started.mdx
+++ b/packages/storybook-html/stories/docs/introduction/get-started.mdx
@@ -16,7 +16,7 @@ import { Meta, Story, Canvas } from "@storybook/blocks";
       </strong>
 
       Our NPM packages are currently restricted to ITS-ADS staff with AWS tools
-      access. If you have access, please refer to the{" "}
+      access. If you have access, please refer to the
 
       <a href="https://confluence.its.uq.edu.au/confluence/x/0DwDCw">
         environment setup instructions
