--- a/packages/storybook-html/stories/components/alert/alert.mdx
+++ b/packages/storybook-html/stories/components/alert/alert.mdx
@@ -419,7 +419,7 @@ new Alerts(document.getElementById("global-alerts-container"));
       </td>
 
       <td className="uqds-table__item" data-title="Variable:">
-        <code>$uq-alert--global</code> <code>$uq-alert--info</code>{" "}
+        <code>$uq-alert--global</code> <code>$uq-alert--info</code>
         <code>$uq-alert--dark</code>
       </td>
 
@@ -439,7 +439,7 @@ new Alerts(document.getElementById("global-alerts-container"));
       </td>
 
       <td className="uqds-table__item" data-title="Variable:">
-        <code>$uq-alert--global</code> <code>$uq-alert--success</code>{" "}
+        <code>$uq-alert--global</code> <code>$uq-alert--success</code>
         <code>$uq-alert--dark</code>
       </td>
 
@@ -459,7 +459,7 @@ new Alerts(document.getElementById("global-alerts-container"));
       </td>
 
       <td className="uqds-table__item" data-title="Variable:">
-        <code>$uq-alert--global</code> <code>$uq-alert--warning</code>{" "}
+        <code>$uq-alert--global</code> <code>$uq-alert--warning</code>
         <code>$uq-alert--dark</code>
       </td>
 
@@ -480,7 +480,7 @@ new Alerts(document.getElementById("global-alerts-container"));
       </td>
 
       <td className="uqds-table__item" data-title="Variable:">
-        <code>$uq-alert--global</code> <code>$uq-alert--error</code>{" "}
+        <code>$uq-alert--global</code> <code>$uq-alert--error</code>
         <code>$uq-alert--dark</code>
       </td>
 
