docs: sb7 tweaks to local nav stories

--- a/packages/storybook-html/stories/components/hero/hero.docs.mdx
+++ b/packages/storybook-html/stories/components/hero/hero.docs.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Canvas } from "@storybook/blocks";
+import { Meta, Story, Source, Canvas } from "@storybook/blocks";
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 import * as HeroStories from "./hero.stories";
 
@@ -28,28 +28,11 @@ There are 2 size variations - small (default) and large (use the `.uq-hero--larg
 
 There are 2 color variations - purple (default) and white (use the `.uq-hero--light` modifier class).
 
-<Canvas sourceState="hidden">
+<Canvas sourceState={"none"}>
   <Story of={HeroStories.Hero} />
 </Canvas>
 
-```html
-<div class="uq-hero uq-hero--light uq-hero--large">
-  <div class="uq-hero__image">
-    <img src="/images/hero/hero-example-1.jpg" alt="" role="presentation" />
-  </div>
-  <div class="uq-container">
-    <div class="uq-hero__content">
-      <h1 class="uq-hero__title">Title</h1>
-      <div class="uq-hero__description">
-        <p>Description</p>
-      </div>
-      <div class="uq-hero__button">
-        <a class="uq-button uq-button--purple" href="#">Button text</a>
-      </div>
-    </div>
-  </div>
-</div>
-```
+<Source of={HeroStories.Hero} />
 
 ### Examples
 
