--- a/packages/storybook-html/stories/layout/sections/sections.docs.mdx
+++ b/packages/storybook-html/stories/layout/sections/sections.docs.mdx
@@ -23,7 +23,7 @@ own `margin` property.
 
 `.uq-sections` elements can be safely nested within each other as needed.
 
-<Canvas sourceState="hidden">
+<Canvas>
   <Story of={SectionsStories.Sections} />
 </Canvas>
 
