--- a/packages/storybook-html/stories/components/hero-basic/hero-basic.docs.mdx
+++ b/packages/storybook-html/stories/components/hero-basic/hero-basic.docs.mdx
@@ -24,48 +24,9 @@ There are 4 elements within the basic hero.
 
 There are no size or colour variations for the basic hero component.
 
-<Canvas sourceState="hidden">
+<Canvas>
   <Story of={HeroBasicStories.HeroBasic} />
 </Canvas>
-
-```html
-<div class="uq-hero-basic">
-  <div class="uq-hero-basic__image">
-    <img
-      src="/images/hero/hero-basic-example-1.jpg"
-      alt=""
-      role="presentation"
-    />
-  </div>
-  <div class="uq-container">
-    <div class="uq-hero-basic__content">
-      <h1 class="uq-hero-basic__title">
-        <div class="uq-hero-basic__eyebrow">Eyebrow</div>
-        Title
-      </h1>
-      <div class="uq-hero-basic__back">
-        <a href="#">
-          <span
-            class="uq-icon uq-icon--common--chevron-left uq-icon--light"
-          ></span
-          >Back link
-        </a>
-      </div>
-    </div>
-    <div class="uq-hero-basic__tabs">
-      <div class="uq-tabs">
-        <div class="uq-tabs__tab-list-wrapper">
-          <div class="uq-tabs__tab-list" role="tablist" aria-label="Tab List">
-            <a class="uq-tabs__tab uq-tabs__tab--active">Tab 1</a>
-            <a class="uq-tabs__tab">Tab 2</a>
-            <a class="uq-tabs__tab">Tab 3</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-```
 
 ### Examples
 
