--- a/packages/storybook-html/stories/components/section/section.docs.mdx
+++ b/packages/storybook-html/stories/components/section/section.docs.mdx
@@ -26,7 +26,7 @@ section spacing between each section.
 
 Implement the markup structure below for the header.
 
-<Canvas sourceState="hidden">
+<Canvas>
   <Story of={SectionStories.Section} />
 </Canvas>
 
@@ -48,7 +48,7 @@ A section with a grey background.
 
 Modifier class: `.uq-section--shaded`
 
-<Canvas sourceState="hidden">
+<Canvas>
   <Story of={SectionStories.Shaded} />
 </Canvas>
 
@@ -57,7 +57,7 @@ Modifier class: `.uq-section--shaded`
 Sections can also implement a `.uq-container` element within their markup so the
 section can run edge-to-edge.
 
-<Canvas sourceState="hidden">
+<Canvas>
   <Story of={SectionStories.Container} />
 </Canvas>
 
@@ -67,7 +67,7 @@ For shaded sections that go edge-to-edge.
 
 Modifier class: `.uq-section--shaded`
 
-<Canvas sourceState="hidden">
+<Canvas>
   <Story of={SectionStories.ShadedContainer} />
 </Canvas>
 
@@ -75,7 +75,7 @@ Modifier class: `.uq-section--shaded`
 
 #### Section with Card grid
 
-<Canvas sourceState="hidden">
+<Canvas>
   <div class="uq-section">
     <div class="uq-container">
       <div class="uq-section__header">
