--- a/packages/storybook-html/stories/layout/card-grid/card-grid.docs.mdx
+++ b/packages/storybook-html/stories/layout/card-grid/card-grid.docs.mdx
@@ -40,7 +40,7 @@ In this target size, cards will display full width at all times.
 
 Modifier class: `.uq-card-grid--target-1x`
 
-<Canvas sourceState="hidden">
+<Canvas>
   <Story of={CardGridStories.OnePerRow} />
 </Canvas>
 
@@ -50,7 +50,7 @@ Cards will typically display two per row except on some mobile devices.
 
 Modifier class: `.uq-card-grid--target-2x`
 
-<Canvas sourceState="hidden">
+<Canvas>
   <Story of={CardGridStories.TwoPerRow} />
 </Canvas>
 
@@ -61,7 +61,7 @@ devices and one per row on mobile devices.
 
 Modifier class: `.uq-card-grid--target-3x`
 
-<Canvas sourceState="hidden">
+<Canvas>
   <Story of={CardGridStories.ThreePerRow} />
 </Canvas>
 
@@ -73,6 +73,6 @@ on mobile devices.
 
 Modifier class: `.uq-card-grid--target-4x`
 
-<Canvas sourceState="hidden">
+<Canvas>
   <Story of={CardGridStories.FourPerRow} />
 </Canvas>
