--- a/packages/storybook-html/stories/layout/container/container.docs.mdx
+++ b/packages/storybook-html/stories/layout/container/container.docs.mdx
@@ -24,7 +24,7 @@ The `.uq-container` element can be used anywhere, for example nested within othe
 It must not be a descendant of other `.uq-container` elements or elements that use
 `@include layout-containment`.
 
-<Canvas sourceState="hidden">
+<Canvas>
   <Story of={ContainerStories.Container} />
 </Canvas>
 
