fix spacing, ignore gulp file eslint

--- a/packages/storybook-html/stories/components/navigation/local-nav/local-nav.mdx
+++ b/packages/storybook-html/stories/components/navigation/local-nav/local-nav.mdx
@@ -30,32 +30,24 @@ back chevron.
 <Canvas>
   <nav className="uq-local-nav" aria-label="Local navigation">
     <div className="uq-local-nav__grandparent">
-      <a className="uq-local-nav__link" href="#" aria-label="Back to UQ home">
-        UQ home
-      </a>
+      <a className="uq-local-nav__link" href="#" aria-label="Back to UQ home">UQ home</a>
     </div>
     <div className="uq-local-nav__grandparent">
-      <a className="uq-local-nav__link" href="#" aria-label="Back to Research">
-        Research
-      </a>
+      <a className="uq-local-nav__link" href="#" aria-label="Back to Research">Research</a>
     </div>
     <div className="uq-local-nav__grandparent">
       <a
         className="uq-local-nav__link"
         href="#"
         aria-label="Back to Research capabilities and initiatives"
-      >
-        Research capabilities and initiatives
-      </a>
+      >Research capabilities and initiatives</a>
     </div>
     <div className="uq-local-nav__parent">
       <a
         className="uq-local-nav__link"
         href="#"
         aria-label="Back to Energy network"
-      >
-        Energy network
-      </a>
+      >Energy network</a>
     </div>
   </nav>
 </Canvas>
@@ -74,14 +66,10 @@ for accessibility the active `a` element is also marked with `aria-current="page
 <Canvas>
   <nav className="uq-local-nav" aria-label="Local navigation">
     <div className="uq-local-nav__grandparent">
-      <a className="uq-local-nav__link" href="#" aria-label="Back to UQ home">
-        UQ home
-      </a>
+      <a className="uq-local-nav__link" href="#" aria-label="Back to UQ home">UQ home</a>
     </div>
     <div className="uq-local-nav__parent">
-      <a className="uq-local-nav__link" href="#" aria-label="Back to Research">
-        Research
-      </a>
+      <a className="uq-local-nav__link" href="#" aria-label="Back to Research">Research</a>
     </div>
     <ul className="uq-local-nav__children">
       <li className="uq-local-nav__child uq-local-nav--current-child">
@@ -89,19 +77,13 @@ for accessibility the active `a` element is also marked with `aria-current="page
           className="uq-local-nav__link uq-local-nav--active-link"
           href="#"
           aria-current="page"
-        >
-          Research impact
-        </a>
+        >Research impact</a>
       </li>
       <li className="uq-local-nav__child uq-local-nav--has-children">
-        <a className="uq-local-nav__link" href="#">
-          Research capabilities and initiatives
-        </a>
+        <a className="uq-local-nav__link" href="#">Research capabilities and initiatives</a>
       </li>
       <li className="">
-        <a className="uq-local-nav__link" href="#">
-          Ethics and integrity
-        </a>
+        <a className="uq-local-nav__link" href="#">Ethics and integrity</a>
       </li>
     </ul>
   </nav>
@@ -117,46 +99,32 @@ The Grandchildren use a `li.uq-local-nav__grandchild` element.
 <Canvas>
   <nav className="uq-local-nav" aria-label="Local navigation">
     <div className="uq-local-nav__grandparent">
-      <a className="uq-local-nav__link" href="#" aria-label="Back to UQ home">
-        UQ home
-      </a>
+      <a className="uq-local-nav__link" href="#" aria-label="Back to UQ home">UQ home</a>
     </div>
     <div className="uq-local-nav__parent">
-      <a className="uq-local-nav__link" href="#" aria-label="Back to Research">
-        Research
-      </a>
+      <a className="uq-local-nav__link" href="#" aria-label="Back to Research">Research</a>
     </div>
     <ul className="uq-local-nav__children">
       <li className="uq-local-nav__child">
-        <a className="uq-local-nav__link" href="#">
-          Research impact
-        </a>
+        <a className="uq-local-nav__link" href="#">Research impact</a>
       </li>
       <li className="uq-local-nav__child uq-local-nav--has-children uq-local-nav--current-child">
         <a
           className="uq-local-nav__link uq-local-nav--active-link"
           href="#"
           aria-current="page"
-        >
-          Research capabilities and initiatives
-        </a>
+        >Research capabilities and initiatives</a>
         <ul className="uq-local-nav__grandchildren">
           <li className="uq-local-nav__grandchild uq-local-nav--has-children">
-            <a className="uq-local-nav__link" href="#">
-              Energy network
-            </a>
+            <a className="uq-local-nav__link" href="#">Energy network</a>
           </li>
           <li className="uq-local-nav__grandchild">
-            <a className="uq-local-nav__link" href="#">
-              Other networks
-            </a>
+            <a className="uq-local-nav__link" href="#">Other networks</a>
           </li>
         </ul>
       </li>
       <li className="uq-local-nav__child">
-        <a className="uq-local-nav__link" href="#">
-          Ethics and integrity
-        </a>
+        <a className="uq-local-nav__link" href="#">Ethics and integrity</a>
       </li>
     </ul>
   </nav>
@@ -168,23 +136,17 @@ shown and a new Parent and Grandparent element are added.
 <Canvas>
   <nav className="uq-local-nav" aria-label="Local navigation">
     <div className="uq-local-nav__grandparent">
-      <a className="uq-local-nav__link" href="#" aria-label="Back to UQ home">
-        UQ home
-      </a>
+      <a className="uq-local-nav__link" href="#" aria-label="Back to UQ home">UQ home</a>
     </div>
     <div className="uq-local-nav__grandparent">
-      <a className="uq-local-nav__link" href="#" aria-label="Back to Research">
-        Research
-      </a>
+      <a className="uq-local-nav__link" href="#" aria-label="Back to Research">Research</a>
     </div>
     <div className="uq-local-nav__parent">
       <a
         className="uq-local-nav__link"
         href="#"
         aria-label="Back to Research capabilities and initiatives"
-      >
-        Research capabilities and initiatives
-      </a>
+      >Research capabilities and initiatives</a>
     </div>
     <ul className="uq-local-nav__children">
       <li className="uq-local-nav__child uq-local-nav--has-children uq-local-nav--current-child">
@@ -192,31 +154,21 @@ shown and a new Parent and Grandparent element are added.
           className="uq-local-nav__link uq-local-nav--active-link"
           href="#"
           aria-current="page"
-        >
-          Energy network
-        </a>
+        >Energy network</a>
         <ul className="uq-local-nav__grandchildren">
           <li className="uq-local-nav__grandchild uq-local-nav__child uq-local-nav--has-children">
-            <a className="uq-local-nav__link" href="#">
-              Partner with us
-            </a>
+            <a className="uq-local-nav__link" href="#">Partner with us</a>
           </li>
           <li className="uq-local-nav__grandchild uq-local-nav__child">
-            <a className="uq-local-nav__link" href="#">
-              Research
-            </a>
+            <a className="uq-local-nav__link" href="#">Research</a>
           </li>
           <li className="uq-local-nav__grandchild uq-local-nav__child">
-            <a className="uq-local-nav__link" href="#">
-              Our people
-            </a>
+            <a className="uq-local-nav__link" href="#">Our people</a>
           </li>
         </ul>
       </li>
       <li className="uq-local-nav__child">
-        <a className="uq-local-nav__link" href="#">
-          Other networks
-        </a>
+        <a className="uq-local-nav__link" href="#">Other networks</a>
       </li>
     </ul>
   </nav>
