docs: some more fixes for hero, section, card-grid and homepage

--- a/packages/storybook-html/stories/components/hero-basic/hero-basic.mdx
+++ b/packages/storybook-html/stories/components/hero-basic/hero-basic.mdx
@@ -28,21 +28,21 @@ There are no size or colour variations for the basic hero component.
   <Story of={HeroBasicStories.HeroBasic} />
 </Canvas>
 
-### Examples
+## Examples
 
-#### Basic
+### Basic
 
 <Canvas>
   <Story of={HeroBasicStories.Basic} />
 </Canvas>
 
-#### Program
+### Program
 
 <Canvas>
   <Story of={HeroBasicStories.Program} />
 </Canvas>
 
-#### Plan
+### Plan
 
 <Canvas>
   <Story of={HeroBasicStories.Plan} />
