--- a/packages/storybook-html/stories/components/hero/hero.mdx
+++ b/packages/storybook-html/stories/components/hero/hero.mdx
@@ -34,9 +34,9 @@ There are 2 color variations - purple (default) and white (use the `.uq-hero--li
 
 <Source of={HeroStories.Hero} />
 
-### Examples
+## Examples
 
-#### Home
+### Home
 
 The homepage hero use the `.uq-hero--light` and `.uq-hero--large` modifier classes
 and includes a purple button.
@@ -45,7 +45,7 @@ and includes a purple button.
   <Story of={HeroStories.Home} />
 </Canvas>
 
-#### Level 1
+### Level 1
 
 Level 1 pages use the `.uq-hero--light` modifier class. Level 1 and 2 pages do not
 include a button.
@@ -54,7 +54,7 @@ include a button.
   <Story of={HeroStories.Level1} />
 </Canvas>
 
-#### Level 2
+### Level 2
 
 Level 2 pages don't use any modifier classes. Level 1 and 2 pages do not
 include a button.
