--- a/packages/storybook-html/stories/components/section/section.mdx
+++ b/packages/storybook-html/stories/components/section/section.mdx
@@ -71,9 +71,9 @@ Modifier class: `.uq-section--shaded`
   <Story of={SectionStories.ShadedContainer} />
 </Canvas>
 
-### Examples
+## Examples
 
-#### Section with Card grid
+### Section with Card grid
 
 <Canvas>
   <div class="uq-section">
