fix: Storybook 7 Tweaks (#500)
* docs: sb7 tweaks to local nav stories

* fix: correct package.json exports for js/css

* fix: package conditional exports

* docs: fix mdx and make breadcrumb story autoplay

* fix: private-design-output package

* style: fix lint

* fix spacing, ignore gulp file eslint

* fix: Minor tweaks git workflow, svgdom, gulp dependancy

* chore: update packages

* chore: readme update and temp svgdom dependacy conflict

* build: workflow consistency

* docs: some more fixes for hero, section, card-grid and homepage

* lint: fix prettier

---------

Co-authored-by: uqbcrunk <b.crunkhorn@uq.edu.au>

--- a/packages/storybook-html/stories/components/navigation/local-nav/local-nav.mdx
+++ b/packages/storybook-html/stories/components/navigation/local-nav/local-nav.mdx
@@ -13,7 +13,7 @@ import * as LocalNavStories from "./local-nav.stories";
 
 The `.uq-local-nav` element provides local navigation for desktop.
 
-<Canvas sourceState="hidden">
+<Canvas>
   <Story of={LocalNavStories.LocalNav} />
 </Canvas>
 
@@ -27,66 +27,30 @@ but only one `.uq-local-nav__parent` element.
 Use a `aria-label="Back to..."` attribute to help screen readers translate the
 back chevron.
 
-<Canvas sourceState="hidden">
+<Canvas>
   <nav className="uq-local-nav" aria-label="Local navigation">
     <div className="uq-local-nav__grandparent">
-      <a className="uq-local-nav__link" href="#" aria-label="Back to UQ home">
-        UQ home
-      </a>
+      <a className="uq-local-nav__link" href="#" aria-label="Back to UQ home">UQ home</a>
     </div>
     <div className="uq-local-nav__grandparent">
-      <a className="uq-local-nav__link" href="#" aria-label="Back to Research">
-        Research
-      </a>
+      <a className="uq-local-nav__link" href="#" aria-label="Back to Research">Research</a>
     </div>
     <div className="uq-local-nav__grandparent">
       <a
         className="uq-local-nav__link"
         href="#"
         aria-label="Back to Research capabilities and initiatives"
-      >
-        Research capabilities and initiatives
-      </a>
+      >Research capabilities and initiatives</a>
     </div>
     <div className="uq-local-nav__parent">
       <a
         className="uq-local-nav__link"
         href="#"
         aria-label="Back to Energy network"
-      >
-        Energy network
-      </a>
+      >Energy network</a>
     </div>
   </nav>
 </Canvas>
-
-```html
-<nav class="uq-local-nav" aria-label="Local navigation">
-  <div class="uq-local-nav__grandparent">
-    <a class="uq-local-nav__link" href="#" aria-label="Back to UQ home"
-      >UQ home</a
-    >
-  </div>
-  <div class="uq-local-nav__grandparent">
-    <a class="uq-local-nav__link" href="#" aria-label="Back to Research"
-      >Research</a
-    >
-  </div>
-  <div class="uq-local-nav__grandparent">
-    <a
-      class="uq-local-nav__link"
-      href="#"
-      aria-label="Back to Research capabilities and initiatives"
-      >Research capabilities and initiatives</a
-    >
-  </div>
-  <div class="uq-local-nav__parent">
-    <a class="uq-local-nav__link" href="#" aria-label="Back to Energy network"
-      >Energy network</a
-    >
-  </div>
-</nav>
-```
 
 #### Children
 
@@ -99,17 +63,13 @@ Child elements that have their own children are marked with `.uq-local-nav--has-
 The active link is marked with `.uq-local-nav--active-link` on the `a` element, and
 for accessibility the active `a` element is also marked with `aria-current="page"`
 
-<Canvas sourceState="hidden">
+<Canvas>
   <nav className="uq-local-nav" aria-label="Local navigation">
     <div className="uq-local-nav__grandparent">
-      <a className="uq-local-nav__link" href="#" aria-label="Back to UQ home">
-        UQ home
-      </a>
+      <a className="uq-local-nav__link" href="#" aria-label="Back to UQ home">UQ home</a>
     </div>
     <div className="uq-local-nav__parent">
-      <a className="uq-local-nav__link" href="#" aria-label="Back to Research">
-        Research
-      </a>
+      <a className="uq-local-nav__link" href="#" aria-label="Back to Research">Research</a>
     </div>
     <ul className="uq-local-nav__children">
       <li className="uq-local-nav__child uq-local-nav--current-child">
@@ -117,56 +77,17 @@ for accessibility the active `a` element is also marked with `aria-current="page
           className="uq-local-nav__link uq-local-nav--active-link"
           href="#"
           aria-current="page"
-        >
-          Research impact
-        </a>
+        >Research impact</a>
       </li>
       <li className="uq-local-nav__child uq-local-nav--has-children">
-        <a className="uq-local-nav__link" href="#">
-          Research capabilities and initiatives
-        </a>
+        <a className="uq-local-nav__link" href="#">Research capabilities and initiatives</a>
       </li>
       <li className="">
-        <a className="uq-local-nav__link" href="#">
-          Ethics and integrity
-        </a>
+        <a className="uq-local-nav__link" href="#">Ethics and integrity</a>
       </li>
     </ul>
   </nav>
 </Canvas>
-
-```html
-<nav class="uq-local-nav" aria-label="Local navigation">
-  <div class="uq-local-nav__grandparent">
-    <a class="uq-local-nav__link" href="#" aria-label="Back to UQ home"
-      >UQ home</a
-    >
-  </div>
-  <div class="uq-local-nav__parent">
-    <a class="uq-local-nav__link" href="#" aria-label="Back to Research"
-      >Research</a
-    >
-  </div>
-  <ul class="uq-local-nav__children">
-    <li class="uq-local-nav__child uq-local-nav--current-child">
-      <a
-        class="uq-local-nav__link uq-local-nav--active-link"
-        href="#"
-        aria-current="page"
-        >Research impact</a
-      >
-    </li>
-    <li class="uq-local-nav__child uq-local-nav--has-children">
-      <a class="uq-local-nav__link" href="#"
-        >Research capabilities and initiatives</a
-      >
-    </li>
-    <li class="uq-local-nav__child">
-      <a class="uq-local-nav__link" href="#">Ethics and integrity</a>
-    </li>
-  </ul>
-</nav>
-```
 
 #### Grandchildren
 
@@ -175,118 +96,57 @@ within the `ul.uq-local-nav__grandchildren` element.
 
 The Grandchildren use a `li.uq-local-nav__grandchild` element.
 
-<Canvas sourceState="hidden">
+<Canvas>
   <nav className="uq-local-nav" aria-label="Local navigation">
     <div className="uq-local-nav__grandparent">
-      <a className="uq-local-nav__link" href="#" aria-label="Back to UQ home">
-        UQ home
-      </a>
+      <a className="uq-local-nav__link" href="#" aria-label="Back to UQ home">UQ home</a>
     </div>
     <div className="uq-local-nav__parent">
-      <a className="uq-local-nav__link" href="#" aria-label="Back to Research">
-        Research
-      </a>
+      <a className="uq-local-nav__link" href="#" aria-label="Back to Research">Research</a>
     </div>
     <ul className="uq-local-nav__children">
       <li className="uq-local-nav__child">
-        <a className="uq-local-nav__link" href="#">
-          Research impact
-        </a>
+        <a className="uq-local-nav__link" href="#">Research impact</a>
       </li>
       <li className="uq-local-nav__child uq-local-nav--has-children uq-local-nav--current-child">
         <a
           className="uq-local-nav__link uq-local-nav--active-link"
           href="#"
           aria-current="page"
-        >
-          Research capabilities and initiatives
-        </a>
+        >Research capabilities and initiatives</a>
         <ul className="uq-local-nav__grandchildren">
           <li className="uq-local-nav__grandchild uq-local-nav--has-children">
-            <a className="uq-local-nav__link" href="#">
-              Energy network
-            </a>
+            <a className="uq-local-nav__link" href="#">Energy network</a>
           </li>
           <li className="uq-local-nav__grandchild">
-            <a className="uq-local-nav__link" href="#">
-              Other networks
-            </a>
+            <a className="uq-local-nav__link" href="#">Other networks</a>
           </li>
         </ul>
       </li>
       <li className="uq-local-nav__child">
-        <a className="uq-local-nav__link" href="#">
-          Ethics and integrity
-        </a>
+        <a className="uq-local-nav__link" href="#">Ethics and integrity</a>
       </li>
     </ul>
   </nav>
 </Canvas>
 
-```html
-<nav class="uq-local-nav" aria-label="Local navigation">
-  <div class="uq-local-nav__grandparent">
-    <a class="uq-local-nav__link" href="#" aria-label="Back to UQ home"
-      >UQ home</a
-    >
-  </div>
-  <div class="uq-local-nav__parent">
-    <a class="uq-local-nav__link" href="#" aria-label="Back to Research"
-      >Research</a
-    >
-  </div>
-  <ul class="uq-local-nav__children">
-    <li class="uq-local-nav__child">
-      <a class="uq-local-nav__link" href="#">Research impact</a>
-    </li>
-    <li
-      class="uq-local-nav__child uq-local-nav--has-children uq-local-nav--current-child"
-    >
-      <a
-        class="uq-local-nav__link uq-local-nav--active-link"
-        href="#"
-        aria-current="page"
-        >Research capabilities and initiatives</a
-      >
-      <ul class="uq-local-nav__grandchildren">
-        <li class="uq-local-nav__grandchild uq-local-nav--has-children">
-          <a class="uq-local-nav__link" href="#">Energy network</a>
-        </li>
-        <li class="uq-local-nav__grandchild">
-          <a class="uq-local-nav__link" href="#">Other networks</a>
-        </li>
-      </ul>
-    </li>
-    <li class="uq-local-nav__child">
-      <a class="uq-local-nav__link" href="#">Ethics and integrity</a>
-    </li>
-  </ul>
-</nav>
-```
-
 When a Grandchild becomes the active link, only its siblings and children are
 shown and a new Parent and Grandparent element are added.
 
-<Canvas sourceState="hidden">
+<Canvas>
   <nav className="uq-local-nav" aria-label="Local navigation">
     <div className="uq-local-nav__grandparent">
-      <a className="uq-local-nav__link" href="#" aria-label="Back to UQ home">
-        UQ home
-      </a>
+      <a className="uq-local-nav__link" href="#" aria-label="Back to UQ home">UQ home</a>
     </div>
     <div className="uq-local-nav__grandparent">
-      <a className="uq-local-nav__link" href="#" aria-label="Back to Research">
-        Research
-      </a>
+      <a className="uq-local-nav__link" href="#" aria-label="Back to Research">Research</a>
     </div>
     <div className="uq-local-nav__parent">
       <a
         className="uq-local-nav__link"
         href="#"
         aria-label="Back to Research capabilities and initiatives"
-      >
-        Research capabilities and initiatives
-      </a>
+      >Research capabilities and initiatives</a>
     </div>
     <ul className="uq-local-nav__children">
       <li className="uq-local-nav__child uq-local-nav--has-children uq-local-nav--current-child">
@@ -294,83 +154,22 @@ shown and a new Parent and Grandparent element are added.
           className="uq-local-nav__link uq-local-nav--active-link"
           href="#"
           aria-current="page"
-        >
-          Energy network
-        </a>
+        >Energy network</a>
         <ul className="uq-local-nav__grandchildren">
           <li className="uq-local-nav__grandchild uq-local-nav__child uq-local-nav--has-children">
-            <a className="uq-local-nav__link" href="#">
-              Partner with us
-            </a>
+            <a className="uq-local-nav__link" href="#">Partner with us</a>
           </li>
           <li className="uq-local-nav__grandchild uq-local-nav__child">
-            <a className="uq-local-nav__link" href="#">
-              Research
-            </a>
+            <a className="uq-local-nav__link" href="#">Research</a>
           </li>
           <li className="uq-local-nav__grandchild uq-local-nav__child">
-            <a className="uq-local-nav__link" href="#">
-              Our people
-            </a>
+            <a className="uq-local-nav__link" href="#">Our people</a>
           </li>
         </ul>
       </li>
       <li className="uq-local-nav__child">
-        <a className="uq-local-nav__link" href="#">
-          Other networks
-        </a>
+        <a className="uq-local-nav__link" href="#">Other networks</a>
       </li>
     </ul>
   </nav>
 </Canvas>
-
-```html
-<nav class="uq-local-nav" aria-label="Local navigation">
-  <div class="uq-local-nav__grandparent">
-    <a class="uq-local-nav__link" href="#" aria-label="Back to UQ home"
-      >UQ home</a
-    >
-  </div>
-  <div class="uq-local-nav__grandparent">
-    <a class="uq-local-nav__link" href="#" aria-label="Back to Research"
-      >Research</a
-    >
-  </div>
-  <div class="uq-local-nav__parent">
-    <a
-      class="uq-local-nav__link"
-      href="#"
-      aria-label="Back to Research capabilities and initiatives"
-      >Research capabilities and initiatives</a
-    >
-  </div>
-  <ul class="uq-local-nav__children">
-    <li
-      class="uq-local-nav__child uq-local-nav--has-children uq-local-nav--current-page"
-    >
-      <a
-        class="uq-local-nav__link uq-local-nav--active-link"
-        href="#"
-        aria-current="page"
-        >Energy network</a
-      >
-      <ul class="uq-local-nav__grandchildren">
-        <li
-          class="uq-local-nav__grandchild uq-local-nav__child uq-local-nav--has-children"
-        >
-          <a class="uq-local-nav__link" href="#">Partner with us</a>
-        </li>
-        <li class="uq-local-nav__grandchild uq-local-nav__child">
-          <a class="uq-local-nav__link" href="#">Research</a>
-        </li>
-        <li class="uq-local-nav__grandchild uq-local-nav__child">
-          <a class="uq-local-nav__link" href="#">Our people</a>
-        </li>
-      </ul>
-    </li>
-    <li class="uq-local-nav__child">
-      <a class="uq-local-nav__link" href="#">Other networks</a>
-    </li>
-  </ul>
-</nav>
-```
