--- a/packages/storybook-html/stories/components/hero/hero.mdx
+++ b/packages/storybook-html/stories/components/hero/hero.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Canvas } from "@storybook/blocks";
+import { Meta, Story, Source, Canvas } from "@storybook/blocks";
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 import * as HeroStories from "./hero.stories";
 
@@ -28,32 +28,15 @@ There are 2 size variations - small (default) and large (use the `.uq-hero--larg
 
 There are 2 color variations - purple (default) and white (use the `.uq-hero--light` modifier class).
 
-<Canvas sourceState="hidden">
+<Canvas sourceState={"none"}>
   <Story of={HeroStories.Hero} />
 </Canvas>
 
-```html
-<div class="uq-hero uq-hero--light uq-hero--large">
-  <div class="uq-hero__image">
-    <img src="/images/hero/hero-example-1.jpg" alt="" role="presentation" />
-  </div>
-  <div class="uq-container">
-    <div class="uq-hero__content">
-      <h1 class="uq-hero__title">Title</h1>
-      <div class="uq-hero__description">
-        <p>Description</p>
-      </div>
-      <div class="uq-hero__button">
-        <a class="uq-button uq-button--purple" href="#">Button text</a>
-      </div>
-    </div>
-  </div>
-</div>
-```
+<Source of={HeroStories.Hero} />
 
-### Examples
+## Examples
 
-#### Home
+### Home
 
 The homepage hero use the `.uq-hero--light` and `.uq-hero--large` modifier classes
 and includes a purple button.
@@ -62,7 +45,7 @@ and includes a purple button.
   <Story of={HeroStories.Home} />
 </Canvas>
 
-#### Level 1
+### Level 1
 
 Level 1 pages use the `.uq-hero--light` modifier class. Level 1 and 2 pages do not
 include a button.
@@ -71,7 +54,7 @@ include a button.
   <Story of={HeroStories.Level1} />
 </Canvas>
 
-#### Level 2
+### Level 2
 
 Level 2 pages don't use any modifier classes. Level 1 and 2 pages do not
 include a button.
