fix: updated maps icons to use newer icon version

--- a/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-0-icon.mdx
+++ b/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-0-icon.mdx
@@ -1,11 +1,12 @@
 import { Meta, Story, Canvas } from "@storybook/blocks";
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
+import * as UqMaps0IconStories from "./uq-maps-0-icon.stories";
 
-<Meta title="Deliverables/UQ Maps/0 Icons" />
+<Meta of={UqMaps0IconStories} />
 
 # UQ Maps: icons
 
-<StatusBadge.Development />
+<StatusBadge.Development /> <StatusBadge.DraftDoc />
 
 ## UI
 
@@ -21,9 +22,9 @@ These docs haven't been written yet. In the meantime, refer to the [🔒 Figma p
 
 ![Icon usage demo](images/app-maps/icon-usage-demo.png)
 
-### Icon list
+## List of icons
 
-These docs haven't been written yet. In the meantime, refer to the [🔒 Figma project][1].
+<Story of={UqMaps0IconStories.icon} />
 
 ## POI map marker icons and room colour pairings
 
