feat: figma designs in storybook

--- a/packages/storybook-html/stories/components/footer/footer.mdx
+++ b/packages/storybook-html/stories/components/footer/footer.mdx
@@ -1,4 +1,5 @@
 import { Meta, Story, Canvas } from "@storybook/blocks";
+import { Figma } from "@storybook/addon-designs/blocks";
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 import * as FooterStories from "./footer.stories";
 
@@ -27,6 +28,10 @@ The footer consists of five main sections.
 <Canvas withToolbar>
   <Story of={FooterStories.footer} />
 </Canvas>
+
+<Figma
+  url="https://www.figma.com/file/Li7SZkmaLgw8ZdiHje2q7x/One-UQ-component-library?type=design&node-id=3853-2229&mode=design&t=8G1CIvJ297Ruw5u5-4"
+/>
 
 ## When and how to use
 
